2007-10-04  Brandon Lewis  <brandon_lewis@berkeley.edu>

	reviewed by: <delete if not using a buddy>

	* pitivi/ui/sourcefactories.py:
	added handler for new-project-failed signal (simply disconnects
	project signals, and clears liststore.

	this should be all the changes required for the simple UI to
	handle file loading. file saving should be easier still, however a
	bunch of seemingly unrelated test cases broke as soon as I
	replaced the dummy filesaving code. i'll investigate.

2007-10-04  Brandon Lewis  <brandon_lewis@berkeley.edu>

	reviewed by: <delete if not using a buddy>

	* pitivi/pitivi.py:
	changed "new-project-loading" signal prototype, now passes the new
	project as first parameter
	* pitivi/project.py:
	project's timeline now initialized in constructor. users of class
	must call "load()" to load the project from a file. this will only
	have an effect the first time it is called.
	* pitivi/ui/mainwindow.py:
	added reason parameter to the notProjectCb prototype, and added
	the reason to the error message.
	* pitivi/ui/timelineobjects.py:
	adjustments to new-project-* signal handlers
	* tests/test_file_load_save.py:
	adjustment to new-project-loading signal handler

2007-10-03  Brandon Lewis  <brandon_lewis@berkeley.edu>

	reviewed by: <delete if not using a buddy>

	* pitivi/pitivi.py:
	minor formatting changes
	* pitivi/ui/mainwindow.py:
	added preliminary support for the new project command. Improved
	support will require some refactoring, so i'm going to commit that
	separately
	* pitivi/ui/timelineobjects.py:
	added handlers for the new-project-* signals. the old code was
	based on the the earlier project signals.

2007-10-03  Brandon Lewis  <brandon_lewis@berkeley.edu>

	reviewed by: <delete if not using a buddy>

	* pitivi/settings.py:
	added new setting for enabling experimental file support
	* pitivi/ui/mainwindow.py:
	added basic ui support for Save / SaveAs commands
	enable experimental file support with PITIVI_FILE_SUPPORT