@@ -260,7 +260,7 @@ class SingleDecodeBin(gst.Bin):
         """
         Remove unused elements connected to srcpad(s) of element
         """
-        self.log("element:%s" % element)
+        self.log("element:%r" % element)
         for pad in element.src_pads():
             if pad.is_linked():
                 peer = pad.get_peer().get_parent()
