@@ -1,3 +1,11 @@
+2007-10-14  Edward Hervey  <bilboed@bilboed.com>
+
+	* pitivi/bin.py:
+	* pitivi/elements/singledecodebin.py:
+	* pitivi/playground.py:
+	Replace use of '%s' by '%r' for gst.Object subclasses in order to
+	avoid deadlocks for people who don't have cvs gst-python.
+
 2007-10-04  Brandon Lewis  <brandon_lewis@berkeley.edu>
 
 	reviewed by: <delete if not using a buddy>
